# mcp_server_toolkit

./: .gitignore  CHANGELOG.md  CHANGES.md  README.md  pyproject.toml  requirements.txt
config/: config-stdio.yaml  factory.example.yaml  framework.example.yaml  mcp-proxy.service  proxy.example.yaml
examples/: README.md  connect_factory_stdio.sh  connect_proxy_http.sh  mcp_client.py  run_factory_echo.sh  run_proxy_full.sh  run_proxy_http.sh  run_proxy_shell.sh
examples/configs/: factory_echo.yaml  proxy_echo.yaml  proxy_full.yaml  proxy_shell.yaml
plugins/: demo_full.py  echo.py  greet.py
plugins/shell/: __init__.py  tools.py
scripts/: new-plugin.sh
src/mcp_server_factory/: __init__.py  commands.py  factory.py  loader.py  tracker.py
src/mcp_server_factory/plugins/: __init__.py  logging.py  management.py
src/mcp_server_framework/: __init__.py  config.py  health.py  logging.py  oauth.py  server.py  session_scope.py
src/mcp_server_framework/gate/: README.md  __init__.py  config.py  gate.py  state.py  totp.py
src/mcp_server_framework/plugins/: __init__.py  introspection.py  loader.py  models.py  registry.py  (+2 more)
src/mcp_server_proxy/: __init__.py  cli.py  client.py  commands.py  management.py  proxy.py  serve.py  tool_log.py
tests/factory/: conftest.py  test_factory.py  test_loader.py  test_logging.py  test_management.py
tests/framework/: test_config.py  test_gate.py  test_health.py  test_logging.py  test_oauth.py  test_server.py  test_session_scope.py  test_tracker.py
tests/plugins/: test_mattermost.py  test_shell.py  test_wekan.py
tests/proxy/: conftest.py  test_cli.py  test_dynamic_dispatch.py  test_management_api.py  test_management_tools.py  test_proxy.py
(+5 files in other folders)
