[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-framework"
version = "1.1.1"
description = "MCP Server Toolkit — Framework, Factory and Proxy for building MCP servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "cuber IT service", email = "info@uc-it.de"}]
keywords = ["mcp", "model-context-protocol", "framework", "factory", "proxy", "llm", "ai", "plugins"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.26.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "pytest-cov>=4.0",
]

[project.scripts]
mcp-factory = "mcp_server_factory.commands:main"
mcp-proxy = "mcp_server_proxy.commands:main"

[project.urls]
Homepage = "https://www.uc-it.de"
Repository = "https://github.com/cuber-it/mcp_server_toolkit"
Issues = "https://github.com/cuber-it/mcp_server_toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_server_framework*", "mcp_server_factory*", "mcp_server_proxy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
